src/objects/Legal_Document__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <formula>Terms_Active_Date__c &lt;= TODAY()  &amp;&amp;
	 End_Date__c &gt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the agreement is Active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms_Active_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Terms Active Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copyright</fullName>
                </value>
                <value>
                    <fullName>Privacy Policy</fullName>
                </value>
                <value>
                    <fullName>Terms and Conditions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <referenceTo>Community</referenceTo>
        <relationshipName>Terms_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Legal Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Terms_Active_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Terms_Active_Date__c</columns>
        <columns>Version__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Legal Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>